<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGray"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#232121"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/display_edittext"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="@dimen/spacing_20x"
            android:layout_gravity="center"
            android:gravity="center|start"
            android:hint="@string/display"
            android:inputType="number"
            android:paddingStart="30dp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textColorHint="#FF656262"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_2x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/orange"
                android:elevation="10dp"
                android:onClick="clearButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/clear"
                android:textColor="@color/red"
                android:textSize="@dimen/calculatorBottomTextSize" />

            <Button
                android:id="@+id/parentheses_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_2x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="parenthesesButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/parentheses"
                android:textColor="@color/orange"
                android:textSize="@dimen/spacing_4x"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/exponent_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_2x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="exponentButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/exponent"
                android:textColor="@color/orange"
                android:textSize="@dimen/calculatorBottomTextSize" />
            <!--            android:onClick="powerOfOnClick"-->

            <Button
                android:id="@+id/divide_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_2x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="divideButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/divide"
                android:textColor="@color/orange"
                android:textSize="@dimen/calculatorBottomTextSize" />

            <ImageButton
                android:id="@+id/backspace_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_2x"
                android:layout_weight="1.4"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="backspaceButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:src="@drawable/ic_baseline_backspace_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/seven_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_4x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="sevenButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="@dimen/calculatorBottomTextSize" />
            <!--            android:onClick="sevenOnClick"-->
            <Button
                android:id="@+id/eight_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_4x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="eightButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="@dimen/calculatorBottomTextSize" />
            <!--            android:onClick="eightOnClick"-->
            <Button
                android:id="@+id/nine_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_4x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="nineButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="@dimen/calculatorBottomTextSize" />
            <!--            android:onClick="nineOnClick"-->
            <Button
                android:id="@+id/multiply_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_4x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="multiplyButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/multiply"
                android:textColor="@color/orange"
                android:textSize="@dimen/calculatorBottomTextSize" />
            <!--            android:onClick="timesOnClick"-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/four_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_4x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="fourButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="@dimen/calculatorBottomTextSize" />
            <!--            android:onClick="fourOnClick"-->
            <Button
                android:id="@+id/five_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_4x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="fiveButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="@dimen/calculatorBottomTextSize" />
            <!--            android:onClick="fiveOnClick"-->
            <Button
                android:id="@+id/six_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_4x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="sixButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="@dimen/calculatorBottomTextSize" />
            <!--            android:onClick="sixOnClick"-->
            <Button
                android:id="@+id/minus_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_4x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="minusButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/subtract"
                android:textColor="@color/orange"
                android:textSize="@dimen/calculatorBottomTextSize" />
            <!--            android:onClick="minusOnClick"-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/one_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_4x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="oneButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="@dimen/calculatorBottomTextSize" />
            <!--            android:onClick="oneOnClick"-->
            <Button
                android:id="@+id/two_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_4x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="twoButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="@dimen/calculatorBottomTextSize" />
            <!--            android:onClick="twoOnClick"-->
            <Button
                android:id="@+id/three_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_4x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="threeButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="@dimen/calculatorBottomTextSize" />
            <!--            android:onClick="threeOnClick"-->
            <Button
                android:id="@+id/add_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_4x"
                android:layout_weight="2"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="addButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/add"
                android:textColor="@color/orange"
                android:textSize="@dimen/calculatorBottomTextSize" />
            <!--            android:onClick="plusOnClick"-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!--            android:onClick="decimalOnClick"-->
            <Button
                android:id="@+id/plus_minus_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_4x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="plusMinus"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/plusMinus"
                android:textColor="@color/white"
                android:textSize="@dimen/calculatorBottomTextSize" />

            <Button
                android:id="@+id/point_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_4x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="pointButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textSize="@dimen/calculatorBottomTextSize" />

            <Button
                android:id="@+id/zero_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_4x"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="@color/darkGray"
                android:elevation="10dp"
                android:onClick="zeroButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="@dimen/calculatorBottomTextSize" />
            <!--            android:onClick="zeroOnClick"-->
            <Button
                android:id="@+id/equals_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_4x"
                android:layout_weight="2"
                android:background="@drawable/button"
                android:backgroundTint="@color/orange"
                android:elevation="10dp"
                android:onClick="equalsButton"
                android:shadowDx="-15"
                android:shadowDy="30"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>